Enable scrollback in .screenrc

--- a/.screenrc
+++ b/.screenrc
@@ -5,3 +5,6 @@ backtick 2 5 5 $HOME/git/dotfiles/meminfo.sh
 hardstatus alwayslastline "%{+b dw}:%{-b dw}:%{+b dk}[%{-b dg} %0C:%s%a %{=b dk}]-[   %{-b dw}Load%{+b dk}:%{-b dg}%l %{+b dk}] [%{-b dg}%2`%{+b dk}] %=[ %{-b dg}%1`%{=b dk} ]%{-b dw}:%{+b dw}:%<"
 
 sorendition "-b dw"
+
+# http://www.samsarin.com/blog/2007/03/11/gnu-screen-working-with-the-scrollback-buffer/
+defscrollback 5000
