properly handle 256 colors in bash and screen

--- a/.screenrc
+++ b/.screenrc
@@ -8,3 +8,5 @@ sorendition "-b dw"
 
 # http://www.samsarin.com/blog/2007/03/11/gnu-screen-working-with-the-scrollback-buffer/
 defscrollback 5000
+
+term screen-256color
