minor updates to .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,4 +11,9 @@ bind C-a last-window
 unbind C-b
 
 # keep the window names constant
+set-window-option -g automatic-rename off
+setw -g allow-rename off
 set-option -g allow-rename off
+
+bind j switch-client -p
+bind k switch-client
