--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,3 +17,7 @@ set-option -g allow-rename off
 
 bind j switch-client -p
 bind k switch-client
+
+# Use 1-based window numbers, because 0 is after 9 on a keyboard.
+set -g base-index 1
+bind r source ~/.tmux.conf\; display "~/.tmux.conf sourced!"
